@@ -22,6 +22,9 @@ python-debian (0.1.23) UNRELEASED; urgency=medium
     data after the signed section (Closes: #695932).
   * Drop support for python2.5.  (This allows us to do fewer import hacks
     in deb822, and probably other modules as well.)
+  * Add a deb822.RestrictedWrapper class, for exposing read-only access
+    to a Deb822 instance's field values as strings, while restricting
+    write access to some fields, which are exposed via properties.
 
  -- Stuart Prescott <stuart@debian.org>  Fri, 13 Jun 2014 00:27:59 +1000
 
